# gcovlens

./: CONTRIBUTING.md  README.md  gcovlens.py  pyproject.toml
.github/workflows/: ci-tests.yml
src/: gcovlens.py
tests/: test_gcovlens_basic.py  test_html_outputs.py  test_md_outputs.py
