[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcovlens"
version = "0.1.3"
description = "Generate HTML/Markdown coverage and diff reports from GCC .gcov files."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "Your Name" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]
dependencies = [
    "pytest>=7"
]

[project.scripts]
gcovlens = "gcovlens:main"   # calls main() inside gcovlens.py

[tool.setuptools]
py-modules = ["gcovlens"]    # single-module project

[tool.pytest.ini_options]
# Add valid pytest options here, for example:
# addopts = "-ra"
